--- a/italy_food_style.css
+++ b/italy_food_style.css
@@ -258,11 +258,11 @@
 #content .choose_and_enjoy{
     display: flex;
     width: 100%;
-    padding-top: 89px;
     flex-direction: column;
-    justify-content: center;
-    height: 250px;
+    justify-content: flex-end;
+    height: 220px;
     align-items: center;
+    padding-bottom: 50px;
 }
 
 #content .choose_and_enjoy .title-desc{
@@ -286,7 +286,7 @@
 #content .choose-enjoy-food-list{
     display: flex;
     justify-content: space-around; 
-    height: 400px;
+    height: 600px;
 }
 
 #content .choose-enjoy-food-list a img{
@@ -313,10 +313,23 @@
 }
 
 #content .choose-enjoy-food-list h2{
+    padding-top: 15px;
     font-family: 'Montserrat', sans-serif;
     font-size: 20px;
     font-weight: 600;
     text-transform: uppercase;
+}
+
+#content .choose-enjoy-food-list .text-desc{
+    padding-top: 10px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 100;
+}
+
+#content .choose-enjoy-food-list .text-desc-2{
+    padding-bottom: 18px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 100;
 }
 
 #content .choose-enjoy-food-list .order-btn{
@@ -346,4 +359,62 @@
     color: #fff;
     width: 100%;
     height: 100%;
+}
+
+#slider .up_coming_event{
+    display: flex;
+    height: 150px;
+    flex-direction: column;
+    align-items: center;
+}
+
+#slider .up_coming_event h3{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+#slider .up_coming_event .title-desc{
+    font-family: 'Fredericka the Great', cursive;
+    font-size: 40px;
+    font-weight: 100;
+    text-transform: uppercase;
+}
+
+#slider .up_coming_event .text-desc{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+}
+
+#slider .up_coming_event .text-desc-2{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+}
+
+#slider .swiper{
+    width: 80%;
+    height: fit-content;
+}
+
+#slider .swiper-slide img{
+    width: 100%;
+    height: 100vh;
+}
+
+#slider .container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#slider .swiper-button-prev{
+    color: #fff;
+}
+
+#slider .swiper-button-next{
+    color: #fff;
+}
+
+#slider .swiper-pagination-bullet-active{
+    background: #fff;
 }
