--- a/italy_food_style.css
+++ b/italy_food_style.css
@@ -418,3 +418,67 @@
 #slider .swiper-pagination-bullet-active{
     background: #fff;
 }
+
+#more-content{
+    background-color: #fff;
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#more-content .try-it-containter{
+    background-color: #fff;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    width: 1200px;
+    height: 400px;
+    /* grid-gap: 10px; */
+}
+
+#more-content .try-it-containter > div{
+    /* background-color: #000; */
+}
+
+#more-content .try-it-containter .try-it-one{
+    display: flex;
+    grid-row-end: span 2;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+#more-content .try-it-containter .try-it-two{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+#more-content .try-it-containter .try-it-three{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+#more-content .try-it-one > img{
+    width: 540px;
+    height: 360px;
+    padding-right: 25px;
+}
+
+#more-content .try-it-two > img{
+    width: 560px;
+    height: 165px;
+}
+
+#more-content .try-it-three > img{
+    width: 560px;
+    height: 165px;
+}
+
+#more-content .group-try-it-right{
+
+}
