--- a/italy_food_style.css
+++ b/italy_food_style.css
@@ -361,6 +361,13 @@
     height: 100%;
 }
 
+#slider{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 #slider .up_coming_event{
     display: flex;
     height: 150px;
@@ -391,37 +398,68 @@
     font-weight: 500;
 }
 
-#slider .swiper{
-    width: 80%;
-    height: fit-content;
-}
+/* html,
+body {
+  position: relative;
+  height: 100%;
+} */
 
-#slider .swiper-slide img{
+/* body {
+  background: #eee;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: #000;
+  margin: 0;
+  padding: 0;
+} */
+
+.swiper {
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 
-#slider .container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-#slider .swiper-button-prev{
-    color: #fff;
-}
-
-#slider .swiper-button-next{
-    color: #fff;
-}
-
-#slider .swiper-pagination-bullet-active{
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
     background: #fff;
+
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 70%;
+    object-fit: cover;
+}
+
+.swiper .swiper-button-prev, .swiper .swiper-button-next{
+    color: #fff;
+}
+
+.swiper .swiper-pagination-bullet-active{
+    background-color: #000;
+}
+
+.swiper-slide.swiper-slide-duplicate.swiper-slide-duplicate-active{
+    transform: scale(2.4);
 }
 
 #more-content{
     background-color: #fff;
-    height: 600px;
+    height: 75vh;
     display: flex;
     justify-content: center;
     align-items: center;
