--- a/italian-food/baitap2/css/home.css
+++ b/italian-food/baitap2/css/home.css
@@ -12,10 +12,6 @@ body {
     overflow: hidden;
 }
 
-.hd-parent {
-    position: relative;
-}
-
 .hd-menu {
     position: absolute;
     top: 17%;
@@ -45,14 +41,8 @@ body {
     margin: 20px 0;
 }
 
-.hd-title2 {
-    position: absolute;
-    top: 52%;
-    left: 10%;
-}
-
 .hd-title2>img {
-    margin: 5px 25px;
+    margin: 5px 20px 5px 0;
 }
 
 .hd-bt>button {
@@ -65,16 +55,50 @@ body {
 
 .hd-bt>button>img {
     width: 85%;
-    padding-top: 4px;
+}
+
+.item1 {
+    position: absolute;
+    top: 18%;
+    left: 44%;
+}
+
+.item2 {
+    position: absolute;
+    bottom: 20%;
+    left: 40%;
+}
+
+.item3 {
+    position: absolute;
+    bottom: 21%;
+    right: 18%;
+}
+
+.fl-left {
+    position: absolute;
+    bottom: -28%;
+    left: 0;
+}
+
+.btnPr {
+    position: absolute;
+    top: 4%;
+    right: 10%;
+    border: none;
+    display: none;
+    background: none;
+}
+
+.btnPr>i {
+    font-size: 30px;
 }
 
 
 /*container*/
 
-.container {
-    width: 100%;
-    position: relative;
-    height: 700px;
+.container-fluid {
+    padding: 0 !important;
 }
 
 .ctn-title {
@@ -97,74 +121,104 @@ body {
 }
 
 
-/*menu*/
+/*slide*/
 
-.menu {
-    padding: 100px 0;
-}
-
-.slideFrom {
-    display: flex;
-    justify-content: center;
-    position: relative;
-    margin: 50px 0;
-}
-
-.fromSlide {
-    position: relative;
-}
-
-.slidePr {
-    width: 800px;
-    height: 460px;
-    overflow: hidden;
-}
-.slideLeft {
-    top: 13%;
-    left: -42%;
-    z-index: -1;
-    position: absolute;
-}
-.slideRight {
-    top: 13%;
-    right: -42%;
-    z-index: -1;
-    position: absolute;
-}
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-.menu-list {
+.slideshow {
     display: flex;
     justify-content: center;
     margin: 100px 0;
 }
 
-.menu-left {
-    margin-right: 30px;
-    position: relative;
+.swiper {
+    width: 100%;
+    height: 100%;
 }
 
-.menu-right {
-    position: relative;
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
 }
 
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+/*menu*/
+
+.menu {
+    padding: 0 0 100px 0;
+    clear: both;
+}
+
+.menu-list {
+    display: grid;
+    justify-content: center;
+    grid-template-columns: 640px 640px;
+    grid-template-rows: 228px;
+    margin: 100px 0;
+}
+
+.menuItem1 {
+    grid-row-start: 1;
+    grid-row-end: 3;
+    position: relative;
+}
+.menuItem2 {
+    grid-column-start: 2;
+    position: relative;
+}
+.menuItem3 {
+    grid-column-start: 2;
+    position: relative;
+}
 .menu-input {
     display: flex;
     justify-content: center;
 }
-
+.menuItem1 > h3 ,.menuItem2 > h3 ,.menuItem3 > h3 {
+    color: #fff;
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    font-size: 30px;
+}
+.menuItem1 > h2  {
+    position: absolute;
+    top: 30%;
+    left: 10%;
+    color: #fff;
+    width: 200px;
+    font-size: 44px;
+}
+.menuItem3 > h3 {
+    font-size: 24px !important;
+}
+.menuItem2 > h2 , .menuItem3 > h2 {
+    position: absolute;
+    top: 30%;
+    left: 10%;
+    color: #fff;
+    width: 240px;
+    font-size: 24px;
+}
 .input-item>input {
     width: 300px;
     padding: 12px;
@@ -181,6 +235,15 @@ body {
     width: 400px;
 }
 
+.mn-bt>button {
+    margin: 20px 0 0 20px;
+    padding: 4px;
+    background-color: #ffe001;
+    border: black 1px solid;
+    border-radius: 6px;
+    width: 300px;
+}
+
 
 /*footer*/
 
@@ -194,6 +257,14 @@ body {
 
 .ft-left {
     width: 500px;
+    position: absolute;
+    top: 15%;
+    left: 10%;
+}
+
+.ft-left>span {
+    color: #ffff;
+    margin-top: 40px;
 }
 
 .ft-left>p {
@@ -201,12 +272,249 @@ body {
     margin: 100px 0;
 }
 
+.ft-right {
+    position: absolute;
+    display: grid;
+    right: 10%;
+    top: 30%;
+}
+
+.ft-item,
+.ft-item2 {
+    margin: 20px;
+}
+
+.ft-item>img,
+.ft-item2>img {
+    float: left;
+}
+
 .ft-mxh {
     position: absolute;
-    bottom: 12%;
-    right: 5%;
+    bottom: 20%;
+    right: 24%;
 }
 
 .ft-mxh>a>img {
     margin: 6px;
+}
+
+@media (min-width: 993px) and (max-width: 1200px) {
+    .hd-title {
+        width: 400px !important;
+    }
+    .hd-menu {
+        right: 9% !important;
+    }
+    .hd-bt>button {
+        margin: 20px 0 0 50px !important;
+        padding: 8px !important;
+    }
+    .fl-left {
+        z-index: 2;
+    }
+    .fl-left>img,
+    .item2>img,
+    .item3>img {
+        width: 80% !important;
+    }
+    .item1 {
+        top: 23% !important;
+    }
+    .item1>img {
+        width: 70% !important;
+    }
+    .item2 {
+        bottom: 15% !important;
+    }
+    .item3 {
+        bottom: 14% !important;
+    }
+    .item4>img {
+        width: 40px !important;
+    }
+    .ft-left>p {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: 350px;
+    }
+    .ft-right {
+        right: 0 !important;
+        top: 18% !important;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+    .hd-title {
+        width: 350px !important;
+    }
+    .hd-menu {
+        right: 2% !important;
+    }
+    .phone {
+        right: -1% !important;
+    }
+    .itemdt {
+        width: 50% !important;
+    }
+    .fl-left>img {
+        width: 70% !important;
+    }
+    .hd-bt>button {
+        margin: 20px 0 0 40px !important;
+        padding: 7px !important;
+    }
+    .item1>img {
+        width: 60% !important;
+    }
+    .item2>img,
+    .item3>img {
+        width: 70% !important;
+    }
+    .item3 {
+        bottom: 14% !important;
+    }
+    .item4 {
+        left: 3% !important;
+    }
+    .item4>img {
+        width: 35px !important;
+    }
+    .ft-left>p {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: 300px;
+    }
+    .ft-right {
+        right: -5% !important;
+    }
+    .ctn,
+    .menu {
+        display: none !important;
+    }
+    .ft-item,
+    .ft-item2 {
+        margin: 10px !important;
+    }
+}
+
+@media (min-width: 576px) and (max-width: 767px) {
+    .item1 {
+        top: 24% !important;
+    }
+    .item1>img {
+        width: 60% !important;
+    }
+    .item2 {
+        bottom: 15% !important;
+    }
+    .item2>img,
+    .item3>img {
+        width: 60% !important;
+    }
+    .item3 {
+        bottom: 14px !important;
+    }
+    .fl-left>img {
+        width: 40% !important;
+    }
+    .hd-menu {
+        right: 2% !important;
+    }
+    .hd-menu>li {
+        margin: 0 10px !important;
+    }
+    .hd-title {
+        width: 280px !important;
+    }
+    .hd-bt>button {
+        margin: 20px 0 0 20px !important;
+        padding: 4px !important;
+    }
+    .hd-bt>button>img {
+        width: 80% !important;
+    }
+    .phone,
+    .item5 {
+        top: 1% !important;
+    }
+}
+
+@media (max-width: 470px) {
+    .phone,
+    .hd-title2,
+    .hd-menu,
+    .ctn,
+    .menu {
+        display: none;
+    }
+    .fl-left {
+        z-index: 2;
+    }
+    .fl-left>img {
+        width: 25%;
+    }
+    .hd-title {
+        width: 150px;
+        top: 24%;
+    }
+    .hd-title>img {
+        margin: 4px;
+    }
+    .item5>img {
+        width: 50%;
+    }
+    .item4>img {
+        width: 22px;
+    }
+    .item2>img,
+    .item3>img,
+    .item1>img {
+        width: 30%;
+    }
+    .btnPr {
+        display: block;
+    }
+    .ft-right {
+        left: 5%;
+    }
+    .ft-left {
+        top: 5% !important;
+        left: 30% !important;
+        float: left !important;
+    }
+    .ft-left>p,
+    .ft-left>span {
+        display: none;
+    }
+    .ft-left>img {
+        width: 30%;
+    }
+    .ft-item>img,
+    .ft-item2>img {
+        width: 6%;
+    }
+    .ft-item,
+    .ft-item2 {
+        margin: 4px;
+    }
+    .ft-item {
+        top: 35%;
+    }
+    .ft-item2 {
+        top: 60%;
+    }
+    .ft-mxh {
+        display: grid;
+        bottom: 0;
+    }
+    .ft-mxh>a>img {
+        width: 20px;
+    }
+    .ft-item>span,
+    .ft-item2>span {
+        width: 200px !important;
+    }
 }
