--- a/italy_food_style.css
+++ b/italy_food_style.css
@@ -514,6 +514,7 @@ body {
 
 #more-content .try-it-containter .try-it-one{
     display: flex;
+    position: relative;
     grid-row-end: span 2;
     width: 100%;
     height: 100%;
@@ -523,6 +524,7 @@ body {
 
 #more-content .try-it-containter .try-it-two{
     display: flex;
+    position: relative;
     align-items: center;
     justify-content: center;
     margin-top: 20px;
@@ -530,9 +532,44 @@ body {
 
 #more-content .try-it-containter .try-it-three{
     display: flex;
+    position: relative;
     align-items: center;
     justify-content: center;
     margin-top: 30px;
+}
+
+#more-content .try-it-one h3{
+    
+}
+
+#more-content .try-it-one .title-more-content-one{
+    position: absolute;
+    top: 50px;
+    left: 80px;
+    color: #fff;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 25px;
+    font-weight: 500;
+}
+
+#more-content .try-it-one .title-more-content-two{
+    position: absolute;
+    top: 100px;
+    left: 80px;
+    color: #fff;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 45px;
+    font-weight: 500;
+}
+
+#more-content .try-it-two h3{
+    position: absolute;
+    top: 20px;
+    left: 40px;
+    color: #fff;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 25px;
+    font-weight: 500;
 }
 
 #more-content .try-it-one > img{
