--- a/italy_food_style.css
+++ b/italy_food_style.css
@@ -723,6 +723,130 @@ body {
 }
 
 #footer{
-    height: 60vh;
+    height: 80vh;
     background-color: #000;
+}
+
+#footer .footer-group-one{
+    height: 20vh;
+}
+
+#footer .footer-group-one .logo-footer{
+    display: flex;
+    width: 30vw;
+    height: 18vh;
+}
+
+#footer .footer-group-one .logo-footer img{
+    width: 20vw;
+    height: 10vh;
+    margin-top: 35px;
+    margin-left: 45px;
+}
+
+#footer .footer-group-two{
+    display: flex;
+    justify-content: space-between;
+    height: 25vh;
+}
+
+#footer .footer-group-three{
+    height: 25vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#footer .footer-group-two .footer-desc{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40vw;
+}
+
+#footer .footer-group-two .footer-desc p{
+    color: #fff;
+    font-size: 15px;
+    font-family: 'Montserrat', sans-serif;
+    line-height: 20px;
+    font-weight: 300;
+}
+
+#footer .footer-group-two .footer-infor{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 35vw;
+}
+
+#footer .footer-group-two .footer-infor .location{
+    width: 2vw;
+    height: 5vh;
+}
+
+#footer .footer-group-two .footer-infor .email{
+    width: 2vw;
+    height: 3vh;
+}
+
+#footer .footer-group-two .footer-infor-group-one{
+    display: flex;
+    height: 8vh;
+    width: 100%;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+#footer .footer-group-two .footer-infor-group-two{
+    display: flex;
+    height: 8vh;
+    width: 100%;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+#footer .footer-group-two .footer-infor .address{
+    color: #fff;
+    font-size: 18px;
+    padding-left: 25px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+}
+
+#footer .footer-group-two .footer-infor .company-email{
+    color: #fff;
+    font-size: 18px;
+    padding-left: 25px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+}
+
+#footer .footer-group-three .footer-sign{
+    width: 30vw;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+#footer .footer-group-three .footer-sign h2{
+    color: #fff;
+    font-size: 15px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+}
+
+#footer .footer-group-three .footer-social_media{
+    width: 30vw;
+    height: 100%;
+    display: flex;
+    align-items: flex-end;
+}
+
+#footer .footer-group-three .footer-social_media img{
+    width: 2vw;
+    margin-right: 10px;
+    height: 4vh;
 }
