--- a/italy_food_style.css
+++ b/italy_food_style.css
@@ -70,6 +70,69 @@
     font-weight: bolder;
     font-family: 'Montserrat', sans-serif;
 }
+.down-nav .nav_bars-btn{
+    display: flex;
+    align-items: center;
+    width: 22px;
+    height: 100%;
+    color: #000;
+    display: none;
+}
+.nav_overlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: flex-start;
+    display: none;
+}
+.nav_overlay.open{
+    display: flex;
+}
+.nav_sidebar{
+    background-color: #fff;
+    width: 200px;
+    height: 100vh;
+    position: relative;
+}
+.nav_sidebar .nav_list > li{
+    display: block;
+    width: 100%;
+    padding-top: 10px;
+    padding-left: 20px;
+    padding-bottom: 10px;
+    background-color: #000;
+}
+.nav_sidebar .nav_list li a{
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #fff;
+    font-weight: 600;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.nav_list{
+    padding-top: 50px;
+}
+.sidebar-close{
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: #000;
+    color:#fff;
+    font-weight: 800;
+    padding: 12px 15px;
+    opacity: 0.8;
+}
+.sidebar-close:hover{
+    background-color: red;
+    color:#fff;
+    opacity: 1;
+}
+.close-icon{
+    line-height: 2;
+}
 .banner{
     display: flex;
     position: relative;
@@ -813,6 +876,25 @@
         padding-bottom: 50px;
     }
 }
+@media only screen and (max-width: 700px) and (min-width: 360px){
+    #header .down-nav .nav_bars-btn{
+        display: block;
+        align-items: center;
+    }
+    #header .nav_pc{
+        display: none;
+    }
+    #header .down-nav{
+        display: flex;
+        height: 50px;
+        justify-content: space-between;
+        margin-right: 25px;
+        padding-left: 10px;
+    }
+    .top-nav .logo{
+        display: none;
+    }
+}
 @media only screen and (max-width: 750px) and (min-width: 360px){
     #contact .form-infor{
         display: flex !important;
@@ -850,4 +932,5 @@
     }
 }
 @media only screen and (max-width: 630px) and (min-width: 360px){
+
 }
