--- a/italy_food_style.css
+++ b/italy_food_style.css
@@ -307,9 +307,24 @@
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
 }
+.box-choose{
+    position: relative;
+}
+.box-choose::before{
+    content: '';
+    display: block;
+    width: 100%;
+    height: 200px;
+    background: #ebe9ac;
+    position: absolute;
+    top: 10%;
+    left: 0;
+}
 .content .choose-enjoy-food-list{
     display: flex;
     justify-content: space-around; 
+    position: relative;
+    z-index: 2;
 }
 .content .choose-enjoy-food-list a img{
     width: 300px;
