--- a/css/italy_food_style.css
+++ b/css/italy_food_style.css
@@ -71,16 +71,15 @@
     font-family: 'Montserrat', sans-serif;
 }
 .top-nav .nav_bars-btn{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 22px;
+    width: 50px;
     /* height: 100%; */
     color: red;
     display: none;
 }
 .top-nav .nav_bars-btn svg{
-
+    width: 20px;
+    padding-top: 15px;
+    /* padding-right: 15px; */
 }
 .nav_overlay{
     position: fixed;
@@ -159,7 +158,7 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: flex-start;
-    align-content: space-between;
+    /* align-content: space-between; */
     margin-top: 40px;
     /* width: 60vw;
     height: 90vh; */
@@ -811,7 +810,12 @@
 .swiper_element{
     display: none;
 }
-
+.sidebar-close, .sidebar-close .nav_list li{
+    cursor: pointer;
+}
+/* .sidebar-close .nav-list:hover li{
+    
+} */
 @media only screen and (max-width: 1360px){
 }
 @media only screen and (max-width: 1202px){
@@ -827,7 +831,7 @@
         font-size: 14px;
     }
 }
-@media only screen and (max-width: 1170px) and (min-width: 360px){
+@media only screen and (max-width: 1170px){
     .more-content .try-it-containter{
         display: flex !important;
         flex-direction: column;
@@ -839,7 +843,7 @@
 }
 @media only screen and (max-width: 1100px){
 }
-@media only screen and (max-width: 1066px){
+@media only screen and (max-width: 1066px) and (min-width: 360px){
     .banner .col-right{
         display: none;
     }
@@ -904,8 +908,10 @@
 }
 @media only screen and (max-width: 700px) and (min-width: 360px){
     #header .top-nav .nav_bars-btn{
-        display: block;
+        display: flex;
+        justify-content: center;
         align-items: center;
+        cursor: pointer;
     }
     #header .nav_pc{
         display: none;
@@ -968,6 +974,34 @@
         text-align: justify;
     }
 }
-@media only screen and (max-width: 630px) and (min-width: 360px){
-
+@media only screen and (max-width: 430px) and (min-width: 360px){
+    .banner .col-left h1{
+        font-size: 50px;
+    }
+    .banner .col-left .group-item-1 h2{
+        font-size: 30px;
+    }
+    .banner .col-left .group-item-1 img{
+        width: 30px;
+        height: 38px;
+    }
+    .banner .col-left{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: flex-start;
+    }
+    .banner-color{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+    .banner .col-right a .spaghetti{
+        width: 150px;
+        height: 150px;
+    }
+    .banner .col-right {
+        display: flex;
+    }
 }
