--- a/infor_page/css/infor_page.css
+++ b/infor_page/css/infor_page.css
@@ -88,7 +88,7 @@
     height: 80px;
 }
 .section_1 .col-right .carousel-control-next-icon{
-    background: url(/img_and_fonts/image/arrow.png);
+    background: url(/infor_page/img_and_fonts/image/arrow.png);
     background-repeat: no-repeat;
     width: 150px;
     height: 62px;
@@ -151,7 +151,71 @@
 .section_3{
     width: 100%;
     background-color: #e9e7e7;
-    height: auto;
+    padding-bottom: 50px;
+}
+.section_3 .col-left-sec-3{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-around;
+    padding-top: 50px;
+}
+.section_3 .row-sec-3 .heading-sec-3{
+    display: flex;
+    justify-content: center;
+}
+.section_3 .heading-sec-3 h2{
+    font-family: 'Cardo', serif;
+    font-weight: 900;
+    font-size: 50px;
+}
+/* .section_3 .col-left-sec-3 .btn{
+    background: url(/infor_page/img_and_fonts/image/plus.png);
+} */
+.section_3 .col-right-sec-3 > img{
+    width: 90%;
+    aspect-ratio: 0.76 / 1;
+}
+.section_3 .menu-option-sec-3{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.section_3 .menu-option-sec-3 p, .section_3 .menu-option-sec-3 h3{
+    margin-bottom: 0;
+}
+.section_3 .menu-option-sec-3 p{
+    font-family: 'Lato', sans-serif;
+    font-size: 18px;
+    font-weight: 600;
+}
+.section_3 .menu-option-sec-3 .line-row{
+    
+}
+.section_3 .col-left-sec-3 .btn{
+    background: url(/infor_page/img_and_fonts/image/plus.png);
+    background-repeat: no-repeat;
+    width: 40px;
+    height: 40px;
+}
+.section_3 .line-row{
+    display: flex;
+    justify-content: center;
+}
+.container-content-col-left-sec-3{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding: 15px 0;
+}
+.container-content-col-left-sec-3 p{
+    padding-right: 20px;
+}
+.container-content-col-left-sec-3 .plus{
+    padding-left: 20px;
+}
+.section_3 .col-right-sec-3{
+    padding-top: 50px;
 }
 @media only screen and (max-width: 1200px) and (min-width: 360px){
     .row.row-sec-2 .col-right-sec-2{
@@ -163,7 +227,23 @@
         font-size: 40px;
     }
 }
+@media only screen and (max-width: 1190px) and (min-width: 360px){
+    .section_3 .col-right-sec-3 > img{
+    width: 90%;
+    aspect-ratio: 0.76 / 1;
+    }
+    .section_3 .line-space{
+        width: 95%;
+    }
+    .section_3 .container-content-col-left-sec-3 p{
+        font-size: 15px;
+    }
+    .section_3 .container-content-col-left-sec-3 .plus{
+        width: 7%;
+        height: 80%;
+    }
 
+}
 @media only screen and (max-width: 1100px) and (min-width: 360px){
     .section_2 .heading-sec-2{
         padding-bottom: 20px;
@@ -179,7 +259,6 @@
         line-height: 15px;
     }
 }
-
 @media only screen and (max-width: 991.9px) and (min-width: 360px){
     .desc-banner-sec-1{
         display: flex;
@@ -191,6 +270,9 @@
     }
     .section_1 .col-left{
         padding-bottom: 20px;
+    }
+    .section_3 .container-content-col-left-sec-3 p{
+        font-size: 13px;
     }
 }
 
@@ -236,7 +318,6 @@
         text-align: justify;
     }
 }
-
 @media only screen and (max-width: 575.9px) and (min-width: 360px){
     .heading-col-right-sec-1{
         padding-bottom: 20px;
